--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </div>
         <nav class="navigation">
           <div class="navContainer">
-          <a href="#home">Home</a>
-          <a href="#about">About</a>
-          <a href="#services">Services</a>
-          <a href="#skills">Skills</a>
-          <a href="#testemonilas">Testemonials</a>
-          <a href="#contact-us">Contact Us</a>
+          <a class="navItem" href="#home">Home</a>
+          <a class="navItem" href="#about">About</a>
+          <a class="navItem" href="#services">Services</a>
+          <a class="navItem" href="#skills">Skills&Projects</a>
+          <a class="navItem" href="#testemonilas">Testemonials</a>
+          <a class="navItem" href="#contact-us">Contact Us</a>
         </div>
         </nav>
       </header>
